[TensorFlow] Enable GEMMA Keras (#2328)
* enable gemma keras model

* change bash file permissions and run 1 instance on 1 NUMA node instead of 1 socket

* add batch size parameter

* Added file in compliance json file


Co-authored-by: Mahathi Vatsal <mahathi.vatsal.salopanthula@intel.com>

--- a/.github/config/compliance-config.json
+++ b/.github/config/compliance-config.json
@@ -66,6 +66,7 @@
   ],
   "skip_test_structure_check": [
     "jax/gemma/inference/cpu",
+    "tensorflow/gemma/inference/cpu",
     "jax/gptj/inference/cpu",
     "pytorch/3d_unet/inference/gpu",
     "pytorch/bert_large/inference/gpu",
