update stack of bert-large and rn50 xpu training (#2332)
* update stack and tests

--- a/docker/max-gpu/pytorch-bert-large-training/tests.yaml
+++ b/docker/max-gpu/pytorch-bert-large-training/tests.yaml
@@ -5,7 +5,7 @@ single-device-bf16-training:
   device: /dev/dri
   env:
     MULTI_TILE: 'False'
-    NUM_DEVICES: 1
+    NUM_DEVICES: '1'
     PLATFORM: Max
     BATCH_SIZE: '16'
     OUTPUT_DIR: /tmp
@@ -23,7 +23,7 @@ multi-device-bf16-training:
   device: /dev/dri
   env:
     MULTI_TILE: 'False'
-    NUM_DEVICES: 2
+    NUM_DEVICES: '2'
     PLATFORM: Max
     BATCH_SIZE: '16'
     OUTPUT_DIR: /tmp
@@ -43,7 +43,7 @@ single-device-fp32-training:
   device: /dev/dri
   env:
     MULTI_TILE: 'False'
-    NUM_DEVICES: 1
+    NUM_DEVICES: '1'
     PLATFORM: Max
     BATCH_SIZE: '16'
     OUTPUT_DIR: /tmp
@@ -61,7 +61,7 @@ multi-device-fp32-training:
   device: /dev/dri
   env:
     MULTI_TILE: 'False'
-    NUM_DEVICES: 2
+    NUM_DEVICES: '2'
     PLATFORM: Max
     BATCH_SIZE: '16'
     OUTPUT_DIR: /tmp
@@ -81,7 +81,7 @@ single-device-tf32-training:
   device: /dev/dri
   env:
     MULTI_TILE: 'False'
-    NUM_DEVICES: 1
+    NUM_DEVICES: '1'
     PLATFORM: Max
     BATCH_SIZE: '16'
     OUTPUT_DIR: /tmp
@@ -99,7 +99,67 @@ multi-device-tf32-training:
   device: /dev/dri
   env:
     MULTI_TILE: 'False'
-    NUM_DEVICES: 2
+    NUM_DEVICES: '2'
+    PLATFORM: Max
+    BATCH_SIZE: '16'
+    OUTPUT_DIR: /tmp
+    DATASET_DIR: /nfs/pdx/disks/mlp_pytorch_dataset/hdf5_seq_512/
+    PRECISION: TF32
+  volumes:
+    - src: /nfs/pdx/disks/mlp_pytorch_dataset/hdf5_seq_512/
+      dst: /nfs/pdx/disks/mlp_pytorch_dataset/hdf5_seq_512/
+    - src: /dev/dri
+      dst: /dev/dri
+    - src: /tmp
+      dst: /tmp
+multi-device-bf16-multi-tile-training:
+  img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-language-modeling-pytorch-max-gpu-bert-large-training
+  cmd: bash run_model.sh
+  ipc: host
+  device: /dev/dri
+  env:
+    MULTI_TILE: 'True'
+    NUM_DEVICES: '2'
+    PLATFORM: Max
+    BATCH_SIZE: '16'
+    OUTPUT_DIR: /tmp
+    DATASET_DIR: /nfs/pdx/disks/mlp_pytorch_dataset/hdf5_seq_512/
+    PRECISION: BF16
+  volumes:
+    - src: /nfs/pdx/disks/mlp_pytorch_dataset/hdf5_seq_512/
+      dst: /nfs/pdx/disks/mlp_pytorch_dataset/hdf5_seq_512/
+    - src: /dev/dri
+      dst: /dev/dri
+    - src: /tmp
+      dst: /tmp
+multi-device-fp32-multi-tile-training:
+  img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-language-modeling-pytorch-max-gpu-bert-large-training
+  cmd: bash run_model.sh
+  ipc: host
+  device: /dev/dri
+  env:
+    MULTI_TILE: 'True'
+    NUM_DEVICES: '2'
+    PLATFORM: Max
+    BATCH_SIZE: '16'
+    OUTPUT_DIR: /tmp
+    DATASET_DIR: /nfs/pdx/disks/mlp_pytorch_dataset/hdf5_seq_512/
+    PRECISION: FP32
+  volumes:
+    - src: /nfs/pdx/disks/mlp_pytorch_dataset/hdf5_seq_512/
+      dst: /nfs/pdx/disks/mlp_pytorch_dataset/hdf5_seq_512/
+    - src: /dev/dri
+      dst: /dev/dri
+    - src: /tmp
+      dst: /tmp
+multi-device-tf32-multi-tile-training:
+  img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-language-modeling-pytorch-max-gpu-bert-large-training
+  cmd: bash run_model.sh
+  ipc: host
+  device: /dev/dri
+  env:
+    MULTI_TILE: 'True'
+    NUM_DEVICES: '2'
     PLATFORM: Max
     BATCH_SIZE: '16'
     OUTPUT_DIR: /tmp
