Convert gptj pyt to models_v2 format (#2313)
Signed-off-by: Minh1 Le<minh1.le@intel.com>
Signed-off-by: Mahathi Vatsal <mahathi.vatsal.salopanthula@intel.com>

--- a/.github/config/compliance-config.json
+++ b/.github/config/compliance-config.json
@@ -111,6 +111,7 @@
     "pytorch/rnnt/training/cpu",
     "pytorch/rnnt/inference/cpu",
     "pytorch/resnet50/training/cpu",
-    "pytorch/resnet50/inference/cpu"
+    "pytorch/resnet50/inference/cpu",
+    "pytorch/gptj/inference/cpu"
   ]
 }
