Leminh/stable diffusion modelsv2 (#2311)
Signed-off-by: Minh1 Le<minh1.le@intel.com>
Signed-off-by: Mahathi Vatsal <mahathi.vatsal.salopanthula@intel.com>

--- a/.github/config/compliance-config.json
+++ b/.github/config/compliance-config.json
@@ -112,6 +112,8 @@
     "pytorch/rnnt/inference/cpu",
     "pytorch/resnet50/training/cpu",
     "pytorch/resnet50/inference/cpu",
-    "pytorch/gptj/inference/cpu"
+    "pytorch/gptj/inference/cpu",
+    "pytorch/stable_diffusion/training/cpu",
+    "pytorch/stable_diffusion/inference/cpu"
   ]
 }
