Migrated Vi-T to models_v2 format (#2310)
Signed-off-by: Minh1 Le<minh1.le@intel.com>
Signed-off-by: Mahathi Vatsal <mahathi.vatsal.salopanthula@intel.com>

--- a/.github/config/compliance-config.json
+++ b/.github/config/compliance-config.json
@@ -114,6 +114,7 @@
     "pytorch/resnet50/inference/cpu",
     "pytorch/gptj/inference/cpu",
     "pytorch/stable_diffusion/training/cpu",
-    "pytorch/stable_diffusion/inference/cpu"
+    "pytorch/stable_diffusion/inference/cpu",
+    "pytorch/vit/inference/cpu"
   ]
 }
