--- a/.github/config/compliance-config.json
+++ b/.github/config/compliance-config.json
@@ -115,6 +115,8 @@
     "pytorch/gptj/inference/cpu",
     "pytorch/stable_diffusion/training/cpu",
     "pytorch/stable_diffusion/inference/cpu",
-    "pytorch/vit/inference/cpu"
+    "pytorch/vit/inference/cpu",
+    "pytorch/llama/training/cpu",
+    "pytorch/llama/inference/cpu"
   ]
 }
