Migrated torchrec_dlrm inference models_v2 format (#2341)
Signed-off-by: Minh1 Le<minh1.le@intel.com>
Signed-off-by: Mahathi Vatsal <mahathi.vatsal.salopanthula@intel.com>

--- a/.github/config/compliance-config.json
+++ b/.github/config/compliance-config.json
@@ -117,6 +117,7 @@
     "pytorch/stable_diffusion/inference/cpu",
     "pytorch/vit/inference/cpu",
     "pytorch/llama/training/cpu",
-    "pytorch/llama/inference/cpu"
+    "pytorch/llama/inference/cpu",
+    "pytorch/torchrec_dlrm/inference/cpu"
   ]
 }
