migrated chatglm inference cpu to models_v2 format (#2340)
Signed-off-by: Minh1 Le<minh1.le@intel.com>
Signed-off-by: Mahathi Vatsal <mahathi.vatsal.salopanthula@intel.com>

--- a/.github/config/compliance-config.json
+++ b/.github/config/compliance-config.json
@@ -118,6 +118,7 @@
     "pytorch/vit/inference/cpu",
     "pytorch/llama/training/cpu",
     "pytorch/llama/inference/cpu",
-    "pytorch/torchrec_dlrm/inference/cpu"
+    "pytorch/torchrec_dlrm/inference/cpu",
+    "pytorch/chatglm/inference/cpu"
   ]
 }
