Convert yolov7 to models_v2 format (#2361)
Signed-off-by: Mahathi Vatsal <mahathi.vatsal.salopanthula@intel.com>

--- a/.github/config/compliance-config.json
+++ b/.github/config/compliance-config.json
@@ -119,6 +119,7 @@
     "pytorch/llama/training/cpu",
     "pytorch/llama/inference/cpu",
     "pytorch/torchrec_dlrm/inference/cpu",
-    "pytorch/chatglm/inference/cpu"
+    "pytorch/chatglm/inference/cpu",
+    "pytorch/yolov7/inference/cpu"
   ]
 }
