--- a/.github/config/compliance-config.json
+++ b/.github/config/compliance-config.json
@@ -120,6 +120,7 @@
     "pytorch/llama/inference/cpu",
     "pytorch/torchrec_dlrm/inference/cpu",
     "pytorch/chatglm/inference/cpu",
-    "pytorch/yolov7/inference/cpu"
+    "pytorch/yolov7/inference/cpu",
+    "pytorch/LCM/inference/cpu"
   ]
 }
