Fixed linter issues

--- a/.github/config/compliance-config.json
+++ b/.github/config/compliance-config.json
@@ -121,6 +121,7 @@
     "pytorch/torchrec_dlrm/inference/cpu",
     "pytorch/chatglm/inference/cpu",
     "pytorch/yolov7/inference/cpu",
-    "pytorch/LCM/inference/cpu"
+    "pytorch/LCM/inference/cpu",
+    "pytorch/gpt-j_mlperf/inference/cpu"
   ]
 }
