--- a/docker/pytorch/docker-compose.yml
+++ b/docker/pytorch/docker-compose.yml
@@ -20,7 +20,7 @@
 
 version: '3'
 services:
-  stable-diffusion-inference:
+  stable-diffusion-inference-gpu:
     build:
       context: ../../
       args:
@@ -35,85 +35,85 @@ services:
       sh -c "python -c 'import torch; import intel_extension_for_pytorch as ipex; print(\"torch:\", torch.__version__, \" ipex:\",ipex.__version__);print(ipex.xpu.is_available())'"
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-generative-ai-pytorch-gpu-stable-diffusion-inference
     pull_policy: always
-  resnet50v1-5-inference:
+  resnet50v1-5-inference-gpu:
     build:
       dockerfile: docker/pytorch/resnet50v1_5/inference/gpu/pytorch-gpu-resnet50v1-5-inference.Dockerfile
-    extends: stable-diffusion-inference
+    extends: stable-diffusion-inference-gpu
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-recognition-pytorch-gpu-resnet50v1-5-inference
-  resnet50v1_5-training:
+  resnet50v1_5-training-gpu:
     build:
       dockerfile: docker/pytorch/resnet50v1_5/training/gpu/pytorch-max-series-resnet50v1-5-training.Dockerfile
-    extends: stable-diffusion-inference
+    extends: stable-diffusion-inference-gpu
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-recognition-pytorch-gpu-resnet50v1-5-training
-  efficientnet-inference:
+  efficientnet-inference-gpu:
     build:
       dockerfile: docker/pytorch/efficientnet/inference/gpu/pytorch-flex-series-efficientnet-inference.Dockerfile
-    extends: stable-diffusion-inference
+    extends: stable-diffusion-inference-gpu
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-recognition-pytorch-flex-gpu-efficientnet-inference
-  yolov5-inference:
+  yolov5-inference-gpu:
     build:
       dockerfile: docker/pytorch/yolov5/inference/gpu/pytorch-flex-series-yolov5-inference.Dockerfile
-    extends: stable-diffusion-inference
+    extends: stable-diffusion-inference-gpu
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-object-detection-pytorch-flex-gpu-yolov5-inference
-  dlrm-inference:
+  dlrm-inference-gpu:
     build:
       dockerfile: docker/pytorch/dlrm/inference/gpu/pytorch-flex-series-dlrm-v1-inference.Dockerfile
-    extends: stable-diffusion-inference
+    extends: stable-diffusion-inference-gpu
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-recommendation-pytorch-flex-gpu-dlrm-v1-inference
-  distilbert-inference:
+  distilbert-inference-gpu:
     build:
       dockerfile: docker/pytorch/distilbert/inference/gpu/pytorch-gpu-distilbert-inference.Dockerfile
-    extends: stable-diffusion-inference
+    extends: stable-diffusion-inference-gpu
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-language-modeling-pytorch-gpu-distilbert-inference
-  unetpp-inference:
+  unetpp-inference-gpu:
     build:
       dockerfile: docker/pytorch/unetpp/inference/gpu/pytorch-flex-series-unetpp-inference.Dockerfile
-    extends: stable-diffusion-inference
+    extends: stable-diffusion-inference-gpu
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-segmentation-pytorch-flex-gpu-unetpp-inference
-  fast-pitch-inference:
+  fast-pitch-inference-gpu:
     build:
       dockerfile: docker/pytorch/fastpitch/inference/gpu/pytorch-flex-series-fast-pitch-inference.Dockerfile
-    extends: stable-diffusion-inference
+    extends: stable-diffusion-inference-gpu
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-speech-generation-pytorch-flex-gpu-fast-pitch-inference
-  swin-transformer-inference:
+  swin-transformer-inference-gpu:
     build:
       dockerfile: docker/pytorch/swin-transformer/inference/gpu/pytorch-flex-series-swin-transformer-inference.Dockerfile
-    extends: stable-diffusion-inference
+    extends: stable-diffusion-inference-gpu
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-recognition-pytorch-flex-gpu-swin-transformer-inference
-  bert_large-inference:
+  bert_large-inference-gpu:
     build:
       dockerfile: docker/pytorch/bert_large/inference/gpu/pytorch-max-series-bert-large-inference.Dockerfile
-    extends: stable-diffusion-inference
+    extends: stable-diffusion-inference-gpu
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-language-modeling-pytorch-max-gpu-bert-large-inference
-  bert_large-training:
+  bert_large-training-gpu:
     build:
       dockerfile: docker/pytorch/bert_large/training/gpu/pytorch-max-series-bert-large-training.Dockerfile
-    extends: stable-diffusion-inference
+    extends: stable-diffusion-inference-gpu
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-language-modeling-pytorch-max-gpu-bert-large-training
-  rnnt-inference:
+  rnnt-inference-gpu:
     build:
       dockerfile: docker/pytorch/rnnt/inference/gpu/pytorch-max-series-rnnt-inference.Dockerfile
-    extends: stable-diffusion-inference
+    extends: stable-diffusion-inference-gpu
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-speech-recognition-pytorch-max-gpu-rnnt-inference
-  rnnt-training:
+  rnnt-training-gpu:
     build:
       dockerfile: docker/pytorch/rnnt/training/gpu/pytorch-max-series-rnnt-training.Dockerfile
-    extends: stable-diffusion-inference
+    extends: stable-diffusion-inference-gpu
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-speech-recognition-pytorch-max-gpu-rnnt-training
-  fbnet-inference:
+  fbnet-inference-gpu:
     build:
       dockerfile: docker/pytorch/fbnet/inference/gpu/pytorch-flex-series-fbnet-inference.Dockerfile
-    extends: stable-diffusion-inference
+    extends: stable-diffusion-inference-gpu
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-recognition-pytorch-flex-gpu-fbnet-inference
-  ifrnet-inference:
+  ifrnet-inference-gpu:
     build:
       dockerfile: docker/pytorch/ifrnet/inference/gpu/pytorch-flex-series-ifrnet-inference.Dockerfile
-    extends: stable-diffusion-inference
+    extends: stable-diffusion-inference-gpu
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-interpolation-pytorch-flex-gpu-ifrnet-inference
-  rife-inference:
+  rife-inference-gpu:
     build:
       dockerfile: docker/pytorch/rife/inference/gpu/pytorch-flex-series-rife-inference.Dockerfile
-    extends: stable-diffusion-inference
+    extends: stable-diffusion-inference-gpu
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-interpolation-pytorch-flex-gpu-rife-inference
   efficientnet-cuda-inference:
     build:
@@ -147,5 +147,5 @@ services:
   rife-cuda-inference:
     build:
       dockerfile: docker/pytorch/rife/inference/gpu/pytorch-cuda-series-rife-inference.Dockerfile
-    extends: stable-diffusion-inference
+    extends: stable-diffusion-inference-gpu
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-interpolation-pytorch-cuda-gpu-rife-inference
