--- a/models_v2/pytorch/gpt-j_mlperf/inference/cpu/gptj-99/pytorch-cpu/docker/Dockerfile_int4
+++ b/models_v2/pytorch/gpt-j_mlperf/inference/cpu/gptj-99/pytorch-cpu/docker/Dockerfile_int4
@@ -56,10 +56,10 @@ ENV PATH /opt/conda/bin:$PATH
 
 FROM dev-base as conda
 ARG PYTHON_VERSION=3.9
-RUN wget -O ~/miniconda.sh https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh  && \
-    chmod +x ~/miniconda.sh && \
-    ~/miniconda.sh -b -p /opt/conda && \
-    rm ~/miniconda.sh && \
+RUN wget -O ~/miniforge.sh https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-Linux-x86_64.sh  && \
+    chmod +x ~/miniforge.sh && \
+    ~/miniforge.sh -b -p /opt/conda && \
+    rm ~/miniforge.sh && \
     /opt/conda/bin/conda install python=${PYTHON_VERSION} -y && \
     /opt/conda/bin/conda config --add channels intel && \
     /opt/conda/bin/conda install -c intel mkl==2023.2.0 mkl-include==2023.2.0 -y && \
